# nim-chat

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  rag_app.py  requirements.txt  streamlit_app.py
microservices-rag/: README.md  WORK_LOG.md  WORK_LOG_FINAL.md  docker-compose-complete.yml  docker-compose-minimal.yml  docker-compose.yml
microservices-rag/docs/api/: API_REFERENCE.md
microservices-rag/docs/architecture/: ARCHITECTURE.md
microservices-rag/frontend/: .dockerignore  .env.example  Dockerfile  README.md  index.html  nginx-minimal.conf  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
microservices-rag/frontend/src/: App.tsx  index.css  main.tsx
microservices-rag/frontend/src/hooks/: useApi.ts
microservices-rag/frontend/src/pages/: ChatPage.tsx  DocumentsPage.tsx  SettingsPage.tsx  StatusPage.tsx
microservices-rag/frontend/src/services/: api.ts
microservices-rag/frontend/src/types/: index.ts
microservices-rag/services/document-service/: .dockerignore  Dockerfile  requirements.txt
microservices-rag/services/document-service/app/: main.py
microservices-rag/services/embedding-service/: Dockerfile  requirements.txt
microservices-rag/services/llm-service/: Dockerfile  requirements.txt
microservices-rag/services/text-processing-service/: Dockerfile  requirements.txt
microservices-rag/services/vector-store-service/: Dockerfile  requirements.txt
microservices-rag/shared/models/: __init__.py  base.py  document.py  embedding.py  llm.py  text_processing.py  vector_store.py
(+72 files in other folders)
