[project]
name = "claude-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.11.0",
    "numpy>=2.3.0",
    "pdfplumber>=0.11.7",
    "pypdf2>=3.0.1",
    "reportlab>=4.4.2",
    "requests>=2.32.4",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.46.0",
    "torch>=2.7.1",
]
